--- a/src/css/mediacss/mediaMobaile.css
+++ b/src/css/mediacss/mediaMobaile.css
@@ -41,7 +41,7 @@
     width: 200px !important;
     left: calc(50% - 100px) !important;
   }
-  .FooterImg {
-    height: 150px !important;
+  div.FooterImg {
+    height: 150px;
   }
 }
