--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,6 +11,6 @@
   z-index: 1;
 }
 .javascript {
-  left: calc(50% - 260px) !important;
-  width: 520px !important;
+  left: calc(50% - 250px);
+  width: 500px !important;
 }
